dist/tests/tipe-data.test.js
describe("data type", () => {
    it("should must declare", () => {
        let name = "Jaka Al Akbar";
        let balance = 11000;
        let isVip = true;
        console.info(name);
        console.info(balance);
        console.info(isVip);
        // name = true; // error
        // balance = "100"; // error
        // isVip = 100; // error
    });
});
export {};
//# sourceMappingURL=tipe-data.test.js.map